DT-1005 pr feedback